base/opengrok/opengrok-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opengrok-ui
spec:
  selector:
    app: opengrok
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  type: ClusterIP
