base/opengrok/opengrok-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opengrok-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: opengrok.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: opengrok
            port:
              number: 8080
